Game home CSS tweaks. Swapped placement of game map and game feed. Fixed alignment of content in Game Feed. Fixed alignment of components after swap.

--- a/web/static/main.css
+++ b/web/static/main.css
@@ -63,14 +63,12 @@ Detective Checklist
     width: 25%;
     min-width:150px;
     /*height: 400px;*/
-    display:block;
     padding:0;
     background-color:#CCC;
     border: solid #444 1px;
     overflow: hidden;
     float: left;
     margin-top:0px;
-    margin-left:30px;
     display: inline-block;
     vertical-align: top;
 }
@@ -188,10 +186,9 @@ Game Components
 Game Tables
 *******************************************************************/
 .gamefeed{
-    margin-top:20px;
     width: 72%;
     min-width:500px;
-    height: 525px;
+    height: 528px;
     padding:0;
     float:left;
     background-color:#CCC;
@@ -202,6 +199,7 @@ Game Tables
     vertical-align: top;
 
     margin-bottom:30px;
+    margin-right:20px;
 }
 .FeedHeader{
     width: 100%;
@@ -251,15 +249,15 @@ Game Tables
     height: 50px;
     display:block;
     padding-bottom:5px;
+    vertical-align: middle;
     clear: both;
 }
 .divFeedColumn1 {
     float: left;
     width: 5%;
     height:100%;
-    display:block;
+    display:inline-block;
     padding: 0 .5%;
-    text-align:center;
 }
 .divFeedColumn2 {
     width: 74%;
@@ -306,12 +304,12 @@ Game Feed Table Item Stylings
 .gamefeed-svg{
     width: 20px;
     height: 20px;
-    float:left;
+
 }
 .icon{
-    float:left;
     height:20px;
     width:20px;
+    margin-top:12px;
 }
 .suggested{
     font-weight:bold;
@@ -341,10 +339,10 @@ Game Map
 }*/
 
 .gameMap-wrapper{
-    margin: 0 2% 0 0;
+    margin: 0 30px 0 0;
     width: 72%;
     min-width:250px;
-    height: 530px;
+    height: 525px;
     padding:0;
     background-color:#000000;
 
@@ -363,10 +361,11 @@ Game Map
 }
 .gameMapBoxHeader{
     width: 100%;
-    height: 30px;
+    height: 25px;
     float:left;
     background-color: #444;
     text-align:center;
+    vertical-align: middle;
 }
 .gameMapBoxBody{
     width: 99.5555%;
@@ -381,8 +380,11 @@ Game Map
 .mapHeader{
     font-size:8.5pt;
     font-weight:bold;
-    margin-bottom: auto 0;
+    margin:0;
+    padding:0;
     color: #FFF;
+    display:inline-block;
+    vertical-align: middle;
 }
 .mapRow-header{
     width: 100%;
@@ -673,6 +675,9 @@ Suggest/Accuse
     overflow: scroll;
     font-size: 10pt;
     background-color: #CCC;
+}
+.firstSuggestLabel{
+    padding-top:15px;
 }
 
 /******************************************************************
